# oai-pmh-scraper

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.github/: dependabot.yml
docs/agents/: README.md
docs/coderabbit/: review-commands.md
docs/engineering/: acceptance-criteria.md  harness-engineering.md
docs/operations/: deploy-runbook.md
docs/security/: api-security-checklist.md  dependency-exceptions.md
docs/workflow/: one-day-delivery-plan.md  pr-continuity.md
src/oai_harvester/: __init__.py  cli.py  client.py  config.py  errors.py  models.py  parser.py  runner.py  state.py  storage.py
tests/: test_cli.py  test_client.py  test_config.py  test_models.py  test_parser.py  test_runner.py  test_state.py  test_storage.py
